--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,9 @@ body {
   font-family: "Karla", sans-serif;
   margin: 0;
 }
+main {
+  padding: 36px;
+}
 
 .header {
   display: flex;
@@ -24,4 +27,27 @@ body {
 .header--title {
   font-size: 1.25rem;
   margin-right: auto;
+}
+
+.form {
+  display: grid;
+  grid-template: 40px 40px / 1fr 1fr;
+  gap: 17px;
+}
+
+.form--input {
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  border: 1px solid #D5D4D8;
+  text-indent: 5px;
+}
+
+.form--button {
+  grid-column: 1 / -1;
+  font-family: "Karla", sans-serif;
+  border-radius: 5px;
+  background: linear-gradient(90.41deg, #711F8D 1.14%, #A818DA 100%);
+  color: white;
+  border: none;
+  cursor: pointer;
 }
